# Omni-Con

./: .gitignore  CLAUDE.md  DEVELOPER.md  LICENSE  README.md  TODO.md  installer.nsi  pyproject.toml
docs/: ARCHITECTURE.md  CONVENTIONS.md  ROADMAP.md
scripts/: check_deps.py
src/omnicon/: __init__.py  __main__.py  app.py
src/omnicon/core/: dispatcher.py  job.py  pdf_tools.py  registry.py  worker.py
src/omnicon/engines/: base.py  html_engine.py  image_engine.py  office_engine.py  pandoc_engine.py  pdf_engine.py  table_engine.py  text_engine.py
src/omnicon/gui/: main_window.py  pdf_tools_dialog.py  settings_dialog.py  theme.py
src/omnicon/utils/: updater.py
tests/: conftest.py  test_dispatcher.py  test_engines.py  test_html_engine.py  test_image_engine.py  test_office_engine.py  test_pandoc_engine.py  test_registry.py  test_text_engine.py
