[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicon"
version = "0.1.0"
description = "Universal desktop file converter — PDF, Office, images, Markdown, and more"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Chenglin Qiu (SHC - Super Han Chinese)", email = "chenglinqiu@hotmail.com"},
]

dependencies = [
    # GUI
    "PySide6>=6.6",
    "PySide6-Fluent-Widgets[full]>=1.6",

    # PDF core
    "PyMuPDF>=1.24",            # fitz — PDF reading, rendering, text extraction
    "pdf2docx>=0.5.8",          # PDF → DOCX conversion
    "img2pdf>=0.5",             # Images → PDF (lossless)
    "pdfminer.six>=20231228",   # PDF text extraction (fallback)

    # Office formats
    "python-docx>=1.1",         # DOCX read/write
    "python-pptx>=0.6.23",     # PPTX read/write
    "openpyxl>=3.1",            # XLSX read/write

    # Data / tables
    "pandas>=2.2",              # DataFrame ops, Excel↔CSV
    "camelot-py[base]>=0.11",   # PDF table extraction
    "pdfplumber>=0.11",         # PDF table extraction (fallback)

    # Markdown / universal
    "pypandoc_binary>=1.13",    # Pandoc wrapper + bundled binary

    # HTML → PDF
    "WeasyPrint>=62",           # HTML/CSS → PDF
    "mammoth>=1.8",             # DOCX → semantic HTML

    # Images
    "Pillow>=10.4",             # Image format conversions
    "CairoSVG>=2.7",            # SVG → PNG/PDF

    # Utilities
    "python-magic>=0.4.27",     # MIME type detection
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.6",
]

# Windows-only high-fidelity Office conversion
windows = [
    "docx2pdf>=0.1.8",
    "comtypes>=1.4",
]

# Phase 3: AI/ML enhanced conversion
ai = [
    "pymupdf4llm>=0.0.17",
    "docling>=2.0",
]

[project.scripts]
omnicon = "omnicon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["omnicon"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require LibreOffice or other system deps",
    "slow: tests that take more than 10 seconds",
]
